tests/type_tests/negatives/curry_callable_instance_arguments.py
from pfun import curry


class C:
    def __call__(self, a: int, b: int) -> int:
        pass


c = curry(C())


c('')('') + 1
